Implement pagination in category endpoints